# fastapi_sqlalchemy_postgresql_ssl

./: .gitignore  README.md  db_connection.py  example.env  main.py  pyproject.toml  requirements.txt
app/: main.py
app/config/: config_reader.py
app/database/: db_connection.py
